k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: balance-service
  labels:
    app: balanceservice
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 3248
      targetPort: 3248
      protocol: TCP
  selector:
     app: balanceservice
