k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: balance-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - ##DOMAIN##
      secretName: letsencrypt
  rules:
    - host: ##DOMAIN##
      http:
        paths:
          - path: /balance-service/v1
            pathType: Prefix
            backend:
              service:
                name: balance-service
                port:
                  number: 3248
